erDiagram
    classes {
        int id PK
        varchar name
        text description
        timestamp created_at
    }

    images {
        int id PK
        int class_id FK
        varchar file_path
        timestamp created_at
    }

    features {
        int id PK
        int image_id FK
        string vector
    }

    models {
        int id PK
        varchar name
        int dimension
        int training_sample_count
        int default_k
        timestamp created_at
        text description
    }

    experiments {
        int id PK
        int model_id FK
        int train_sample_count
        int test_sample_count
        double accuracy
        double kd_tree_build_time_ms
        double kd_tree_search_time_ms
        double linear_search_time_ms
        timestamp performed_at
        text notes
    }

    predictions {
        int id PK
        int image_id FK
        int model_id FK
        int predicted_class_id
        int actual_class_id
        double distance
        boolean used_kd_tree
        int k
        timestamp created_at
    }

    classes ||--o{ images : "имеет"
    images ||--o| features : "признаки"
    models ||--o{ experiments : "эксперименты"
    models ||--o{ predictions : "предсказания"
    images ||--o{ predictions : "результаты"
